Laboratorios/03_Kubernetes/todolist_postgres/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todolist-service
spec:
  selector:
    app: todolist-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
  type: LoadBalancer # Permite acesso externo à aplicação
